# extension-template

./: README.md  pyproject.toml  setup_template.py
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci-setup.yml  ci-typescript.yml  ci.yml  publish-python.yml  publish-typescript.yml  publish.yml
python/: README.md  pyproject.toml  setup_template.py
python/src/strands_template/: __init__.py  conversation_manager.py  intervention.py  memory_store.py  model.py  session_manager.py  storage.py  tool.py
python/tests/: test_conversation_manager.py  test_intervention.py  test_memory_store.py  test_model.py  test_plugin.py  test_session_manager.py  test_storage.py  test_tool.py
src/strands_template/: __init__.py  plugin.py
typescript/: .gitignore  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  setup-template.ts  tsconfig.json  tsconfig.test.json
typescript/src/: conversation-manager.ts  index.ts  intervention.ts  memory-store.ts  model.ts  plugin.ts  session-manager.ts  storage.ts  tool.ts
typescript/test/: conversation-manager.test.ts  intervention.test.ts  memory-store.test.ts  model.test.ts  plugin.test.ts  session-manager.test.ts  storage.test.ts  tool.test.ts
